[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["obiorbitalstar <obiorbitalstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
